--- a/Soo/myPage/Test/scss/_greensock.scss
+++ b/Soo/myPage/Test/scss/_greensock.scss
@@ -1,11 +1,7 @@
 .box .greensock .intro {
-    height: 3000vh;
+    height: 1100vw;
     width: 100%;
-    padding: 5vw;
     color: white;
-    font: 10vw/1.8 "arial";
-}
-
-.box .greensock .intro .h1 {
-    left: 0; !important
+    font: 7vw/1.8 "arial";
+    text-align: center;
 }
