--- a/Soo/myPage/Test/scss/_btns.scss
+++ b/Soo/myPage/Test/scss/_btns.scss
@@ -1,105 +1,111 @@
 .btnPrev {
-  width: 60px;
-  height: 60px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-40vw, -50%);
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  font-size: 16px;
-  padding-left: 20px;
-  cursor: pointer;
-  color: white;
-
-  span {
-    transition: 0.5s;
-  }
-
-  &::before,
-  &::after {
-    content: "";
-    display: block;
-    width: 100%;
-    height: 2px;
-    background-color: white;
+    width: 1vw;
+    height: 1vw;
     position: absolute;
-    left: 0px;
-    transform-origin: left center;
-    transform: rotate(-180deg);
-    transition: 0.5s;
-  }
+    top: 15vw;
+    left: 48.7vw;
+    transform: translate(-40vw, 40%);
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    font-size: 16px;
+    padding-left: 20px;
+    cursor: pointer;
+    color: white;
 
-  &::after {
-    transform: rotate(180deg);
-  }
-
-  &:hover {
     span {
-      transform: translate(100%, 0);
-      opacity: 0;
+        transition: 0.5s;
     }
 
-    &::before {
-      transform: rotate(-30deg);
+    .fa-solid {
+        position: absolute;
+        left: -0.5vw;
+        font-size: 20px;
+        transition: 0.5s;
     }
 
-    &::after {
-      transform: rotate(30deg);
+    // &::before,
+    // &::after {
+    //     content: "";
+    //     display: block;
+    //     width: 100%;
+    //     height: 2px;
+    //     background-color: white;
+    //     position: absolute;
+    //     left: 0px;
+    //     transform-origin: left center;
+    //     transform: rotate(-180deg);
+    //     transition: 0.5s;
+    // }
+
+    // &::after {
+    //     transform: rotate(180deg);
+    // }
+
+    &:hover {
+        span {
+            transform: translate(100%, 0);
+            opacity: 0;
+        }
+
+        & .fa-solid {
+            transform: rotate(-40deg) scale(1.7);
+        }
     }
-  }
 }
 
 .btnNext {
-  width: 60px;
-  height: 60px;
-  position: absolute;
-  top: 50%;
-  right: 10%;
-  transform: translate(33vw, -50%);
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  font-size: 16px;
-  padding-right: 20px;
-  cursor: pointer;
-  color: white;
-
-  span {
-    transition: 0.5s;
-  }
-
-  &::before,
-  &::after {
-    content: "";
-    display: block;
-    width: 100%;
-    height: 2px;
-    background-color: white;
+    width: 1vw;
+    height: 1vw;
     position: absolute;
-    left: 0px;
-    transform-origin: right center;
-    transform: rotate(-180deg);
-    transition: 0.5s;
-  }
+    top: 15.85vw;
+    left: -5.3vw;
+    transform: translate(23vw, -50%);
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    font-size: 16px;
+    padding-right: 20px;
+    cursor: pointer;
+    color: white;
 
-  &::after {
-    transform: rotate(180deg);
-  }
-
-  &:hover {
     span {
-      transform: translate(-100%, 0);
-      opacity: 0;
+        transition: 0.5s;
     }
 
-    &::before {
-      transform: rotate(-30deg);
+    .fa-solid {
+        position: absolute;
+        left: 2.5vw;
+        font-size: 20px;
+        transition: 0.5s;
     }
 
-    &::after {
-      transform: rotate(30deg);
+    // &::before,
+    // &::after {
+    //     content: "";
+    //     display: block;
+    //     width: 100%;
+    //     height: 2px;
+    //     background-color: white;
+    //     position: absolute;
+    //     left: 0px;
+    //     transform-origin: right center;
+    //     transform: rotate(-180deg);
+    //     transition: 0.5s;
+    // }
+
+    // &::after {
+    //     transform: rotate(180deg);
+    // }
+
+    &:hover {
+        span {
+            transform: translate(-100%, 0);
+            opacity: 0;
+        }
+
+        & .fa-solid {
+            transform: rotate(40deg) scale(1.7);
+        }
     }
-  }
 }
