--- a/Soo/myPage/Test/css/style.css
+++ b/Soo/myPage/Test/css/style.css
@@ -330,6 +330,18 @@ figure > p {
   transform: translate(-50%, 0);
 }
 
+#p7 .plusBtn {
+  position: absolute;
+  top: 25vw;
+  left: 45vw;
+  text-decoration: none;
+  border: 2px solid black;
+  background-color: black;
+  border-radius: 30%;
+  color: white;
+  cursor: pointer;
+}
+
 #p7 .promotion {
   display: flex;
   justify-content: center;
