--- a/COMPLETE/main.css
+++ b/COMPLETE/main.css
@@ -299,7 +299,7 @@ font-family: 'Roboto', sans-serif; */
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 5vw;
+    padding: 4vw;
     position: absolute;
     opacity: 0;
     pointer-events: none;
@@ -333,7 +333,7 @@ font-family: 'Roboto', sans-serif; */
 }
 
 #pg_3 .wrapper .card .img:hover {
-    transform: scale(1.1);
+    transform: scale(1.3);
 }
 
 /* 이미지 hover 했을 때 자전하는 것처럼 표현 */
@@ -349,6 +349,8 @@ font-family: 'Roboto', sans-serif; */
     background: linear-gradient(to bottom, #bea2e7 0%, #86b7e7 100%);
     color: #fff;
     transition: 0.8s;
+    margin-left: 13vw;
+    margin-bottom: 2vw;
 }
 
 #pg_3 .card > a:hover {
