--- a/1/pg_1/test7.css
+++ b/1/pg_1/test7.css
@@ -37,7 +37,7 @@ font-family: 'Roboto', sans-serif; */
 }
 
 #pg_1 .container h2 {
-    display: block;
+  display: block;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
@@ -51,7 +51,6 @@ font-family: 'Roboto', sans-serif; */
 #pg_1 .container span {
   display: inline-block;
 }
-
 
 /* TITLE */
 #pg_1 .container .title1 {
@@ -138,4 +137,10 @@ font-family: 'Roboto', sans-serif; */
   100% {
     opacity: 0;
   }
+}
+
+.noneDisplay {
+  position: absolute;
+  top: 50vw;
+  opacity: 0;
 }
