--- a/COMPLETE/main.css
+++ b/COMPLETE/main.css
@@ -244,7 +244,7 @@ font-family: 'Roboto', sans-serif; */
     height: 100vw;
     width: 100vw;
     top: -70vw;
-    left: -2.5vw;
+    left: -1vw;
     /* animation: rotate 5s linear infinite; */
 }
 
@@ -262,7 +262,7 @@ font-family: 'Roboto', sans-serif; */
     height: 40vw;
     width: 40vw;
     left: 100vh;
-    top: 49vw;
+    top: 50vw;
     /* border: 1px solid gray; */
     opacity: 0;
     transition: 1s;
@@ -273,11 +273,12 @@ font-family: 'Roboto', sans-serif; */
 }
 
 #pg_3 .wrapper .card {
+    margin-right: 10vw;
     width: 430px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 4vw;
+    padding: 7vw;
     position: absolute;
     opacity: 0;
     pointer-events: none;
@@ -311,7 +312,7 @@ font-family: 'Roboto', sans-serif; */
 }
 
 #pg_3 .wrapper .card .img:hover {
-    transform: scale(1.3);
+    transform: scale(1.1);
 }
 
 /* 이미지 hover 했을 때 자전하는 것처럼 표현 */
@@ -322,13 +323,13 @@ font-family: 'Roboto', sans-serif; */
 /* EXPLORE 버튼 */
 #pg_3 .card > a {
     text-decoration: none;
-    padding: 7px 18px;
+    padding: 9px 20px;
     border-radius: 25px;
-    background: linear-gradient(to bottom, #bea2e7 0%, #86b7e7 100%);
+    background: linear-gradient(to bottom, #ED7B84 0%, #9055FF 100%);
     color: #fff;
     transition: 0.8s;
-    margin-left: 15vw;
-    margin-bottom: 0.5vw;
+    margin-left: 20vw;
+    margin-bottom: -4vw;
 }
 
 #pg_3 .card > a:hover {
