--- a/Soo/myPage/satellite/css/style.css
+++ b/Soo/myPage/satellite/css/style.css
@@ -1,94 +1,202 @@
-* {
+@import url("https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap");
+svg {
+  z-index: 100;
+}
+:root {
+  --padding: 10vmin;
+  --color-background: #d0cbc7;
+
+  --font-size-large: 8vw;
+  --font-size-medium: 4vw;
+  --font-size-normal: 2vw;
+
+  @media only screen and (min-width: 800px) {
+    --font-size-large: 64px;
+    --font-size-medium: 32px;
+    --font-size-normal: 16px;
+  }
+
+  @media only screen and (max-width: 500px) {
+    --font-size-large: 40px;
+    --font-size-medium: 20px;
+    --font-size-normal: 14px;
+  }
+}
+
+a {
+  color: white;
+}
+
+ul {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  list-style: none;
 }
 
-.outer {
-  width: 20rem;
-  height: 20rem;
-  position: relative;
-  border: 2px solid #426190;
-  border-radius: 50%;
-  margin: 25% auto;
+li {
+  margin-top: 10px;
 }
 
-.satellite_wrap {
-  position: absolute;
-  width: 100%;
-  height: 100%;
+html,
+body {
+  margin: 0;
+  // overflow: hidden;
+  min-height: 100%;
+  min-width: 100%;
+  font-family: "Libre Baskerville", serif;
+  background-color: var(--color-background);
+  font-weight: 400;
+  font-size: var(--font-size-normal);
+  overflow-x: hidden;
+}
+
+canvas {
+  position: fixed;
+  z-index: 10;
   top: 0;
   left: 0;
+  z-index: 2;
+  pointer-events: none;
+
+  visibility: hidden;
+  opacity: 0;
 }
 
-.satellite_box {
-  position: absolute;
-  top: -25%;
-  left: -25%;
-  width: 150%;
-  height: 150%;
-  animation: forwardRotate 8s linear infinite;
-  text-align: center;
-  line-height: 7rem;
-}
-.satellite_box p {
-  width: 7rem;
-  height: 7rem;
-  border: 2px solid #426190;
-  border-radius: 50%;
-  background: #fff;
-  box-shadow: 2px 2px 10px 2px #b3b6da;
-  font-size: 1rem;
-  font-weight: bold;
-  color: #426190;
-  animation: reverseRotate 8s linear infinite;
+.solid {
+  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
 }
 
-.satellite_box1 p {
+.wireframe {
+  clip-path: polygon(0% 100%, 100% 100%, 100% 100%, 0% 100%);
+}
+
+.content {
   position: relative;
-  top: 30%;
-  left: -12%;
-}
+  z-index: 1;
 
-.satellite_box2 p {
-  position: relative;
-  top: -14%;
-  left: 30%;
-}
-
-.satellite_box3 p {
-  position: relative;
-  top: 5%;
-  left: 77%;
-}
-
-.satellite_box4 p {
-  position: relative;
-  top: 80%;
-  left: 20%;
-}
-
-.satellite_box5 p {
-  position: relative;
-  top: 60%;
-  left: 80%;
-}
-
-@keyframes forwardRotate {
-  from {
-    transform: rotate(0deg), translate(-50% -50%);
+  .trigger {
+    position: absolute;
+    top: 0;
+    height: 100%;
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
-@keyframes reverseRotate {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(-360deg);
-  }
-}
 
-/*# sourceMappingURL=style.css.map */
+  .section {
+    position: relative;
+    padding: var(--padding);
+    --pad2: calc(var(--padding) * 2);
+    width: calc(100vw - var(--pad2));
+    height: calc(100vh - var(--pad2));
+    // min-height: 400px;
+    margin: 0 auto;
+    z-index: 2;
+
+    &.dark {
+      color: white;
+      background-color: black;
+    }
+
+    &.right {
+      text-align: right;
+    }
+  }
+
+  .blueprint {
+    position: relative;
+    background-color: #131c2a;
+    background-image: linear-gradient(rgba(255, 255, 255, 0.1) 1px, transparent 1px), linear-gradient(90deg, rgba(255, 255, 255, 0.1) 1px, transparent 1px),
+      linear-gradient(rgba(255, 255, 255, 0.05) 1px, transparent 1px), linear-gradient(90deg, rgba(255, 255, 255, 0.05) 1px, transparent 1px);
+    background-size: 100px 100px, 100px 100px, 20px 20px, 20px 20px;
+    background-position: -2px -2px, -2px -2px, -1px -1px, -1px -1px;
+    background-attachment: fixed;
+
+    svg {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      stroke: white;
+      pointer-events: none;
+      visibility: hidden;
+    }
+
+    .dark {
+      background-color: transparent;
+    }
+  }
+
+  .ground-container {
+    position: relative;
+    overflow: hidden;
+    // perspective: 2px;
+
+    .parallax {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: -100px;
+      background-repeat: no-repeat;
+      background-position: top center;
+      background-size: cover;
+      transform-origin: top center;
+    }
+
+    .ground {
+      z-index: -1;
+      background-image: url("https://assets.codepen.io/557388/background-reduced.jpg");
+    }
+
+    .clouds {
+      z-index: 2;
+      background-image: url("https://assets.codepen.io/557388/clouds.png");
+    }
+  }
+
+  .scroll-cta,
+  .credits {
+    position: absolute;
+    bottom: var(--padding);
+  }
+
+  .scroll-cta {
+    font-size: var(--font-size-medium);
+    opacity: 0;
+  }
+
+  .sunset {
+    background: url("https://assets.codepen.io/557388/sunset-reduced.jpg") no-repeat top center;
+    background-size: cover;
+    transform-origin: top center;
+  }
+
+  h1,
+  h2 {
+    font-size: var(--font-size-large);
+    margin: 0vmin 0 2vmin 0;
+    font-weight: 700;
+    display: inline;
+  }
+
+  h3 {
+    font-size: var(--font-size-medium);
+    font-weight: 400;
+    margin: 0;
+  }
+
+  .end h2 {
+    margin-bottom: 50vh;
+  }
+
+  .loading {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: var(--font-size-medium);
+  }
+}
