--- a/Soo/myPage/satellite/css/style.css
+++ b/Soo/myPage/satellite/css/style.css
@@ -17,8 +17,9 @@ body {
 }
 
 .photo {
-  width: 100px;
-  height: 100px;
+  width: 150px;
+  height: 210px;
+  transform: rotate(180deg);
 }
 
 /*# sourceMappingURL=style.css.map */
