--- a/COMPLETE/main.css
+++ b/COMPLETE/main.css
@@ -1,14 +1,15 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 body {
-    width: 100%;
-    height: 100%;
-    background: url(./img/space.jpg);
-    height: 3000px;
+  width: 100%;
+  height: 100%;
+  background: url(./img/space.jpg);
+  height: 3000px;
+  overflow-x: hidden;
 }
 /* =================================================================================== */
 
@@ -17,12 +18,6 @@ body {
 font-family: 'Bungee', cursive;
 font-family: 'Koulen', cursive;
 font-family: 'Roboto', sans-serif; */
-
-* {
-  margin: 0px;
-  padding: 0px;
-  font-family: "Roboto", sans-serif;
-}
 
 /* BANNER */
 #pg_1 .banner {
@@ -51,7 +46,7 @@ font-family: 'Roboto', sans-serif; */
 }
 
 #pg_1 .container h2 {
-    display: block;
+  display: block;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
@@ -65,7 +60,6 @@ font-family: 'Roboto', sans-serif; */
 #pg_1 .container span {
   display: inline-block;
 }
-
 
 /* TITLE */
 #pg_1 .container .title1 {
@@ -154,14 +148,39 @@ font-family: 'Roboto', sans-serif; */
   }
 }
 
+.noneDisplay {
+  position: absolute;
+  top: 50vw;
+  opacity: 0;
+}
+
 /* =================================================================================== */
 /* SeungSoo */
 
 .noContent {
-    width: 100%;
-    height: 200vh;
+  width: 100%;
+  height: 100vw;
 }
-#pg_2 {
+
+.greensock .intro {
+  height: 100vw;
+  width: 100%;
+  color: white;
+  font: 7vw/1.8 "arial";
+  top: 0px;
+}
+
+.greensock .intro .h1 {
+  position: absolute;
+  top: 10%;
+}
+
+.greensock .photo {
+  width: 150px;
+  height: 210px;
+  transform: rotate(180deg);
+}
+/* #pg_2 {
     width: 100%;
     height: 300vh;
     cursor: url(../img/cursor.png), auto;
@@ -177,17 +196,17 @@ font-family: 'Roboto', sans-serif; */
   margin-top: -110px;
   margin-left: -25px;
 } */
-
+/* 
 #pg_2 .container {
     position: relative;
 }
 
 #pg_2 > div {
     color: white;
-}
+} */
 
 /* Stars */
-#pg_2 .small-star {
+/* #pg_2 .small-star {
     width: 3em;
     height: 3em;
     position: absolute;
@@ -203,10 +222,10 @@ font-family: 'Roboto', sans-serif; */
     width: 9em;
     height: 9em;
     position: absolute;
-}
+} */
 
 /* Asteriod */
-#pg_2 .things .box .asteriod {
+/* #pg_2 .things .box .asteriod {
     width: 18em;
     height: 18em;
     position: absolute;
@@ -224,95 +243,95 @@ font-family: 'Roboto', sans-serif; */
     position: absolute;
     top: 70vh;
     left: 10vw;
-}
+} */
 /* =================================================================================== */
 /* MinJung */
 /* SUN */
 
 #pg_3 {
-    position: relative;
-    width: 100%;
-    height: 500vw;
+  position: relative;
+  width: 100%;
+  height: 500vw;
 }
 #pg_3 .sun {
-    background-image: url(./img/sun1.png);
-    display: flex;
-    background-repeat: no-repeat;
-    position: absolute;
-    /* transform: translate(56vh, 50vh); */
-    transform: translate(30vw, 70vw);
-    height: 100vw;
-    width: 100vw;
-    top: -70vw;
-    left: -1vw;
-    /* animation: rotate 5s linear infinite; */
+  background-image: url(./img/sun1.png);
+  display: flex;
+  background-repeat: no-repeat;
+  position: absolute;
+  /* transform: translate(56vh, 50vh); */
+  transform: translate(30vw, 70vw);
+  height: 100vw;
+  width: 100vw;
+  top: -70vw;
+  left: -1vw;
+  /* animation: rotate 5s linear infinite; */
 }
 
 #pg_3 .sun.animate {
-    transition: 5s;
-    transform: translate(-2vw, 120vw) scale(1.1);
+  transition: 5s;
+  transform: translate(-2vw, 120vw) scale(1.1);
 }
 
 /* PLANET */
 #pg_3 .wrapper {
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 40vw;
-    width: 40vw;
-    left: 100vh;
-    top: 50vw;
-    /* border: 1px solid gray; */
-    opacity: 0;
-    transition: 1s;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 40vw;
+  width: 40vw;
+  left: 100vh;
+  top: 50vw;
+  /* border: 1px solid gray; */
+  opacity: 0;
+  transition: 1s;
 }
 
 #pg_3 .wrapper.on {
-    opacity: 1;
+  opacity: 1;
 }
 
 #pg_3 .wrapper .card {
-    margin-right: 10vw;
-    width: 430px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 7vw;
-    position: absolute;
-    opacity: 0;
-    pointer-events: none;
-    animation: animate 20s linear infinite;
-    animation-delay: calc(4s * var(--delay));
+  margin-right: 10vw;
+  width: 430px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 7vw;
+  position: absolute;
+  opacity: 0;
+  pointer-events: none;
+  animation: animate 20s linear infinite;
+  animation-delay: calc(4s * var(--delay));
 }
 
 #pg_3 .wrapper .card:last-child {
-    animation-delay: calc(-4s * var(--delay));
+  animation-delay: calc(-4s * var(--delay));
 }
 
 /* 지정된 공간에 hover 하면 애니메이션 멈추기 */
 #pg_3 .wrapper:hover .card {
-    animation-play-state: paused;
+  animation-play-state: paused;
 }
 
 #pg_3 .card .content {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 /* HTML 말고 css로 background image 를 줘야 애니메이션 먹음 */
 #pg_3 .wrapper .card .img {
-    height: 20vh;
-    width: 20vh;
-    position: absolute;
-    border-radius: 50%;
-    transition: 0.5s;
-    background-repeat: no-repeat;
-    cursor: pointer;
+  height: 20vh;
+  width: 20vh;
+  position: absolute;
+  border-radius: 50%;
+  transition: 0.5s;
+  background-repeat: no-repeat;
+  cursor: pointer;
 }
 
 #pg_3 .wrapper .card .img:hover {
-    transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 /* 이미지 hover 했을 때 자전하는 것처럼 표현 */
@@ -322,34 +341,34 @@ font-family: 'Roboto', sans-serif; */
 
 /* EXPLORE 버튼 */
 #pg_3 .card > a {
-    text-decoration: none;
-    padding: 9px 20px;
-    border-radius: 25px;
-    background: linear-gradient(to bottom, #ED7B84 0%, #9055FF 100%);
-    color: #fff;
-    transition: 0.8s;
-    margin-left: 20vw;
-    margin-bottom: -4vw;
+  text-decoration: none;
+  padding: 9px 20px;
+  border-radius: 25px;
+  background: linear-gradient(to bottom, #ed7b84 0%, #9055ff 100%);
+  color: #fff;
+  transition: 0.8s;
+  margin-left: 20vw;
+  margin-bottom: -4vw;
 }
 
 #pg_3 .card > a:hover {
-    color: black;
+  color: black;
 }
 
 /* 우주선 이모티콘 */
 #pg_3 .spaceship i {
-    position: absolute;
-    font-size: 40px;
-    color: white;
-    top: 200vh;
-    left: -8vh;
-    z-index: 1;
-    animation: spaceship 10s linear infinite;
-    opacity: 0;
+  position: absolute;
+  font-size: 40px;
+  color: white;
+  top: 200vh;
+  left: -8vh;
+  z-index: 1;
+  animation: spaceship 10s linear infinite;
+  opacity: 0;
 }
 
 #pg_3 .spaceship.on i {
-    opacity: 1;
+  opacity: 1;
 }
 
 /* 점프하는 사람 이모티콘 */
@@ -365,72 +384,72 @@ font-family: 'Roboto', sans-serif; */
 
 /* 슬라이드 애니메이션 */
 @keyframes animate {
-    0% {
-        opacity: 0;
-        transform: translateY(100%) scale(0.5);
-    }
-    5%,
-    20% {
-        opacity: 0.4;
-        transform: translateY(100%) scale(0.7);
-    }
-    25%,
-    40% {
-        opacity: 1;
-        pointer-events: auto;
-        transform: translateY(0%) scale(1);
-    }
-    45%,
-    60% {
-        opacity: 0.4;
-        transform: translateY(-100%) scale(0.7);
-    }
-    65%,
-    100% {
-        opacity: 0;
-        transform: translateY(-100%) scale(0.5);
-    }
+  0% {
+    opacity: 0;
+    transform: translateY(100%) scale(0.5);
+  }
+  5%,
+  20% {
+    opacity: 0.4;
+    transform: translateY(100%) scale(0.7);
+  }
+  25%,
+  40% {
+    opacity: 1;
+    pointer-events: auto;
+    transform: translateY(0%) scale(1);
+  }
+  45%,
+  60% {
+    opacity: 0.4;
+    transform: translateY(-100%) scale(0.7);
+  }
+  65%,
+  100% {
+    opacity: 0;
+    transform: translateY(-100%) scale(0.5);
+  }
 }
 
 /* 행성 자전하는 애니메이션 */
 @keyframes rotate {
-    to {
-        background-position: -200%, 0;
-    }
+  to {
+    background-position: -200%, 0;
+  }
 }
 
 /* 점프하는 애니메이션 */
 @keyframes jump {
-    0% {
-        transform: translate(0, 0);
-    }
+  0% {
+    transform: translate(0, 0);
+  }
 
-    50% {
-        transform: translate(0, -3vh);
-    }
+  50% {
+    transform: translate(0, -3vh);
+  }
 
-    100% {
-        transform: translateY(-1vh);
-    }
+  100% {
+    transform: translateY(-1vh);
+  }
 }
 
 /* 우주선 애니메이션 */
 @keyframes spaceship {
-    0% {
-        transform: translate(0, 0) rotate(0deg);
-    }
-    25% {
-        transform: translate(40vh, -40vh) rotate(-270deg);
-    }
-    50% {
-        transform: translate(80vh, -80vh) rotate(100deg);
-    }
-    75% {
-        transform: translate(40vh, -40vh);
-    }
-    100% {
-        z-index: 0;
-    }
+  0% {
+    transform: translate(0, 0) rotate(0deg);
+  }
+  25% {
+    transform: translate(40vh, -40vh) rotate(-270deg);
+  }
+  50% {
+    transform: translate(80vh, -80vh) rotate(100deg);
+  }
+  75% {
+    transform: translate(40vh, -40vh);
+  }
+  100% {
+    z-index: 0;
+  }
 }
 /* 
 .card>.earth:active .card .content .img{
@@ -438,46 +457,46 @@ font-family: 'Roboto', sans-serif; */
 } */
 /* =================================================================================== */
 section#pg_4 {
-    width: 100%;
-    height: 100vh;
-    margin-top: 100vh;
-    /* background-color: black; */
-    overflow: hidden;
+  width: 100%;
+  height: 100vh;
+  margin-top: 100vh;
+  /* background-color: black; */
+  overflow: hidden;
 }
 
 section#pg_4 .container {
-    width: 100%;
-    height: 100vh;
-    position: relative;
+  width: 100%;
+  height: 100vh;
+  position: relative;
 }
 
 section#pg_4 .container p {
-    color: white;
+  color: white;
 }
 
 #pg_4 .container {
-    padding: 6em;
+  padding: 6em;
 }
 
 #pg_4 .container div {
-    margin-top: 2em;
+  margin-top: 2em;
 }
 #pg_4 .container p {
-    font-size: 5em;
+  font-size: 5em;
 }
 #pg_4 .container .part-1 {
-    /* border: 1px solid white; */
-    /* transform: translateX(-700px); */
-    transition: 1s;
+  /* border: 1px solid white; */
+  /* transform: translateX(-700px); */
+  transition: 1s;
 }
 /* #pg_4 .container .part-1:hover {
   transform: translateX(0px);
 } */
 #pg_4 .container .part-2 {
-    /* border: 1px solid white; */
-    margin-left: 5em;
-    /* transform: translateX(700px); */
-    transition: 1s;
+  /* border: 1px solid white; */
+  margin-left: 5em;
+  /* transform: translateX(700px); */
+  transition: 1s;
 }
 /* #pg_4 .container .part-2:hover {
   transform: translateX(0px);
@@ -485,51 +504,51 @@ section#pg_4 .container p {
 
 /* 정강이 로고 */
 #pg_4 .container .commet img {
-    position: absolute;
-    width: 60vw;
-    height: 60vw;
-    top: 50%;
-    left: 50%;
-    transform: translate(-40%, -65%);
+  position: absolute;
+  width: 60vw;
+  height: 60vw;
+  top: 50%;
+  left: 50%;
+  transform: translate(-40%, -65%);
 }
 #pg_4 .container .part-3 {
-    /* margin-top: 5em; */
-    margin-left: 30em;
-    /* border: 1px solid white; */
-    /* transform: translateX(-700px); */
-    transition: 1s;
+  /* margin-top: 5em; */
+  margin-left: 30em;
+  /* border: 1px solid white; */
+  /* transform: translateX(-700px); */
+  transition: 1s;
 }
 /* #pg_4 .container .part-3:hover {
   transform: translateX(0px);
 } */
 #pg_4 .container .part-4 {
-    margin-left: 35em;
-    /* border: 1px solid white; */
-    transition: 1s;
+  margin-left: 35em;
+  /* border: 1px solid white; */
+  transition: 1s;
 }
 
 #pg_4 .container .questionMark {
-    position: absolute;
-    top: 70%;
-    right: 15%;
-    transform: translate(-50%, -50%);
-    /* width: 1vw;
+  position: absolute;
+  top: 70%;
+  right: 15%;
+  transform: translate(-50%, -50%);
+  /* width: 1vw;
   height: 1vw; */
 }
 
 #pg_4 .container .questionMark img {
-    width: 15vw;
-    height: 15vw;
+  width: 15vw;
+  height: 15vw;
 }
 
 #pg_4 .container .monster {
-    position: absolute;
-    top: 55%;
-    left: 15%;
+  position: absolute;
+  top: 55%;
+  left: 15%;
 }
 #pg_4 .container .monster img {
-    width: 20vw;
-    height: 20vw;
+  width: 20vw;
+  height: 20vw;
 }
 /* ?를 텍스트로 구현하는것보다 
 네온 느낌나는 img 구해서 하는게 더 좋을것 같아서
