--- a/Soo/rainbow/style.css
+++ b/Soo/rainbow/style.css
@@ -1,41 +1,104 @@
-html,
+@import url("https://fonts.googleapis.com/css2?family=Lora:wght@700&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
 body {
-  height: 100%;
-  background: lightpink;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  background-image: url("./img/space.jpg");
+  background-repeat: repeat;
+  width: 100%;
+  height: 300vw;
 }
 
-svg {
-  fill: none;
-  width: 600px;
-  stroke-width: 30px;
-  stroke-linecap: round;
+#rainbow {
+  position: relative;
 }
 
-path {
-  stroke: #000;
-  stroke-dasharray: var(--length);
-  stroke-dashoffset: var(--length);
+.swing {
+  position: absolute;
+  top: 3vw;
+  left: 10vw;
+  animation: swing ease-in-out 2.5s infinite alternate;
+  float: left;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 }
 
-.svg-main > path {
-  stroke: firebrick;
-  animation: path var(--duration) ease-in forwards;
-  animation-delay: var(--delay);
+.swing .album {
+  position: absolute;
+  width: 80vw;
+  height: 40vw;
+  border: 5px solid #f8f8f8;
+  background-color: white;
+  border-radius: 30px;
 }
 
-.svg-bg > path {
-  stroke: #fff;
-  animation: path var(--duration) ease forwards;
-  animation-delay: var(--delay);
-}
-
-@keyframes path {
-  100% {
-    stroke-dashoffset: 0;
+@keyframes swing {
+  0% {
+    transform: translate(0, 0);
   }
+  100% {
+    transform: translate(0, 3vw);
+  }
+}
+.album .element {
+  font-family: "Lora", serif;
+  font-size: 5vw;
+  margin-left: 30vw;
+}
+
+.album .typed-cursor,
+.swing .loading .typed-cursor {
+  font-family: "Lora", serif;
+  font-size: 2vw;
+}
+
+.album .noBox {
+  width: 100%;
+  height: 15vw;
+}
+
+.swing .loading {
+  position: absolute;
+  width: 80vw;
+  height: 40vw;
+  border: 5px solid white;
+  background-color: white;
+  border-radius: 30px;
+}
+
+.swing .loading .noBox {
+  width: 100%;
+  height: 15vw;
+}
+
+.swing .loading .elementLoading {
+  font-family: "Lora", serif;
+  font-size: 5vw;
+  margin-left: 30vw;
+}
+
+.album .enterBtn {
+  position: absolute;
+  font-family: "Lora", serif;
+  font-size: 1.6vw;
+  top: 27vw;
+  left: 35vw;
+  padding: 10px;
+  border: 2px solid black;
+  border-radius: 20px;
+  cursor: pointer;
+  opacity: 0;
+}
+
+.album .enterBtn:hover {
+  transform: scale(1.3);
+  transition: 0.5s;
 }
 
 /*# sourceMappingURL=style.css.map */
