--- a/Soo/rainbow/style.css
+++ b/Soo/rainbow/style.css
@@ -29,6 +29,14 @@ body {
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 }
 
+@keyframes swing {
+  0% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(0, 3vw);
+  }
+}
 .swing .album {
   position: absolute;
   width: 80vw;
@@ -38,27 +46,19 @@ body {
   border-radius: 30px;
 }
 
-@keyframes swing {
-  0% {
-    transform: translate(0, 0);
-  }
-  100% {
-    transform: translate(0, 3vw);
-  }
-}
-.album .element {
+.swing .album .element {
   font-family: "Lora", serif;
   font-size: 5vw;
   margin-left: 30vw;
 }
 
-.album .typed-cursor,
+.swing .album .typed-cursor,
 .swing .loading .typed-cursor {
   font-family: "Lora", serif;
   font-size: 2vw;
 }
 
-.album .noBox {
+.swing .album .noBox {
   width: 100%;
   height: 15vw;
 }
@@ -83,7 +83,7 @@ body {
   margin-left: 30vw;
 }
 
-.album .enterBtn {
+.swing .album .enterBtn {
   position: absolute;
   font-family: "Lora", serif;
   font-size: 1.6vw;
@@ -96,7 +96,7 @@ body {
   opacity: 0;
 }
 
-.album .enterBtn:hover {
+.swing .album .enterBtn:hover {
   transform: scale(1.3);
   transition: 0.5s;
 }
