--- a/COMPLETE/Soo/style.css
+++ b/COMPLETE/Soo/style.css
@@ -38,6 +38,7 @@ body {
   }
 }
 .swing .album {
+  text-align: center;
   position: absolute;
   width: 80vw;
   height: 40vw;
@@ -49,7 +50,6 @@ body {
 .swing .album .element {
   font-family: "Lora", serif;
   font-size: 5vw;
-  margin-left: 30vw;
 }
 
 .swing .album .typed-cursor,
