--- a/COMPLETE/Soo/main/main.scss
+++ b/COMPLETE/Soo/main/main.scss
@@ -170,7 +170,7 @@ section.innerbox {
     position: absolute;
     top: 138.7vw;
     width: 100%;
-    height: 500vw;
+    height: 550vw;
     background-color: white;
 
     & .red {
@@ -226,32 +226,95 @@ section.innerbox {
         color: rgb(252, 26, 64);
     }
 
-    // & .red .text1 {
-    //     z-index: 5;
-    // }
-    // & .red .text2 {
-    //     z-index: 4;
-    // }
-    // & .red .text3 {
-    //     z-index: 3;
-    // }
-    // & .red .text4 {
-    //     z-index: 2;
-    // }
-    // & .red .text5 {
-    //     z-index: 1;
-    // }
+    &::after {
+        content: "";
+        display: block;
+        position: absolute;
+        top: 500vw;
+        left: 0px;
+        width: 100%;
+        height: 100vh;
+        background: linear-gradient(180deg, rgba(255, 255, 255, 0), rgba(18, 41, 67, 1));
+
+        // & .red .text1 {
+        //     z-index: 5;
+        // }
+        // & .red .text2 {
+        //     z-index: 4;
+        // }
+        // & .red .text3 {
+        //     z-index: 3;
+        // }
+        // & .red .text4 {
+        //     z-index: 2;
+        // }
+        // & .red .text5 {
+        //     z-index: 1;
+        // }
+    }
+    // .second {
+    //     &::before {
+    //         content: "";
+    //         display: block;
+    //         position: absolute;
+    //         z-index: 2;
+    //         top: 0px;
+    //         left: 0px;
+    //         width: 100%;
+    //         height: 50vh;
+    //         background: linear-gradient(180deg, rgba(247, 94, 87, 1), rgba(255, 127, 80, 0));
+    //     }
 }
-// .second {
-//     &::before {
-//         content: "";
-//         display: block;
-//         position: absolute;
-//         z-index: 2;
-//         top: 0px;
-//         left: 0px;
-//         width: 100%;
-//         height: 50vh;
-//         background: linear-gradient(180deg, rgba(247, 94, 87, 1), rgba(255, 127, 80, 0));
-//     }
-// }
+
+//
+
+.third {
+    position: absolute;
+    top: 687.1vw;
+    width: 100%;
+    height: 500vw;
+    background-color: rgb(18, 41, 67);
+    font-size: 9vw;
+    color: rgb(11, 24, 39);
+
+    & .bbaegom1 {
+        width: 100%;
+    }
+
+    & h1.from {
+        position: absolute;
+        top: 23vw;
+        left: 5vw;
+    }
+
+    & h1.the {
+        position: absolute;
+        top: 25vw;
+        left: 30vw;
+        font-size: 3vw;
+    }
+
+    & h1.birthday {
+        position: absolute;
+        top: 23vw;
+        left: 35vw;
+    }
+
+    & #count {
+        font-size: 7vw;
+        letter-spacing: 0.3px;
+        line-height: 5.5vw;
+        font-weight: 700;
+        // text-align: center;
+        position: absolute;
+        top: 40vw;
+        left: 40vw;
+    }
+
+    & .bbaegom2 {
+        position: absolute;
+        width: 27vw;
+        top: 30.7vw;
+        left: 0.1vw;
+    }
+}
