--- a/COMPLETE/Soo/main/main.css
+++ b/COMPLETE/Soo/main/main.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css?family=Corben:700");
 * {
   padding: 0;
   margin: 0;
@@ -10,12 +11,58 @@ html {
 
 body {
   position: relative;
-  background-image: url("../img/space.jpg");
-  background-repeat: repeat;
   width: 100%;
   height: 2000vw;
 }
 
+.bg {
+  background-image: radial-gradient(50% 176%, #000000 80%, #061922 100%);
+  min-height: 3000vw;
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
+.bg__content {
+  position: relative;
+  align-self: center;
+  padding: 3rem 0;
+}
+
+.star {
+  position: absolute;
+  min-width: 100vw;
+  min-height: 100vh;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+}
+
+.star .svg {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+#star-top-layer {
+  will-change: transform;
+  transform: translateY(-768px);
+  animation: fall 22.5s infinite linear;
+}
+
+#star-bottom-layer {
+  will-change: transform;
+  transform: translateY(-768px);
+  animation: fall 45s infinite linear;
+}
+
+@keyframes fall {
+  100% {
+    transform: translateY(0);
+  }
+}
 .container {
   position: absolute;
   top: 3vw;
@@ -220,7 +267,7 @@ section.innerbox::after {
   height: 200vw;
   background-color: rgb(18, 41, 67);
   font-size: 9vw;
-  color: rgb(11, 24, 39);
+  color: rgb(15, 33, 53);
   text-shadow: 3px 3px 3px rgb(47, 75, 119);
 }
 .third .bbaegom1 {
@@ -228,18 +275,18 @@ section.innerbox::after {
 }
 .third h1.from {
   position: absolute;
-  top: 23vw;
+  top: 22vw;
   left: 5vw;
 }
 .third h1.the {
   position: absolute;
-  top: 25vw;
+  top: 24vw;
   left: 30vw;
   font-size: 3vw;
 }
 .third h1.birthday {
   position: absolute;
-  top: 23vw;
+  top: 22vw;
   left: 35vw;
 }
 .third #count {
@@ -256,6 +303,92 @@ section.innerbox::after {
   width: 27vw;
   top: 30.7vw;
   left: 0.1vw;
+}
+
+#fourth {
+  position: absolute;
+  width: 100%;
+  height: 200vw;
+  background-color: white;
+  top: 1405vw;
+}
+#fourth .wrap div {
+  width: 79vw;
+  height: 52vw;
+  position: absolute;
+  top: 0vw;
+  opacity: 0;
+}
+#fourth .wrap .red {
+  background-color: red;
+}
+#fourth .wrap .red img {
+  position: absolute;
+  right: 0;
+  top: 10vw;
+}
+#fourth .wrap .orange {
+  background-color: orange;
+}
+#fourth .wrap .orange img {
+  position: absolute;
+  right: 0;
+  top: 10vw;
+}
+#fourth .wrap .yellow {
+  background-color: yellow;
+}
+#fourth .wrap .yellow img {
+  position: absolute;
+  right: 0;
+  top: 10vw;
+}
+#fourth .wrap .green {
+  background-color: green;
+}
+#fourth .wrap .green img {
+  position: absolute;
+  right: 0;
+  top: 10vw;
+}
+#fourth .wrap .sky {
+  background-color: skyblue;
+}
+#fourth .wrap .sky img {
+  position: absolute;
+  right: 0;
+  top: 10vw;
+}
+#fourth .wrap .violet {
+  background-color: violet;
+}
+#fourth .wrap .violet img {
+  position: absolute;
+  right: 0;
+  top: 10vw;
+}
+#fourth .wrap .black {
+  background-color: black;
+}
+#fourth .wrap .black img {
+  position: absolute;
+  right: 0;
+  top: 10vw;
+}
+#fourth #btns {
+  position: absolute;
+  top: 5vw;
+  width: 6vw;
+  border: 2px solid red;
+  font-size: 2vw;
+  cursor: pointer;
+  z-index: 999;
+}
+#fourth #btns .btn {
+  width: 5vw;
+  height: 5vw;
+  background-color: red;
+  border-radius: 50%;
 }
 
 /*# sourceMappingURL=main.css.map */
